# synthetic_knowledge_graphs

./: .gitignore  README.md  pyproject.toml
scripts/: create_fruni.py  create_ftree.py  create_user_item_attr.py
synthetic_knowledge_graphs/: __init__.py
synthetic_knowledge_graphs/core/contracts/: graph_utils.py  logger.py  plotter.py  synthetic_dataset.py
synthetic_knowledge_graphs/core/entities/: io_utils.py  name_generator.py
synthetic_knowledge_graphs/core/values/: constants.py
synthetic_knowledge_graphs/impl/datasets/: fruni.py  ftree.py  user_item_attr.py
synthetic_knowledge_graphs/impl/graph_utils/: __init__.py  graph_utils_nx.py
synthetic_knowledge_graphs/impl/logger/: __init__.py  dummy_logger.py  fs_logger.py
synthetic_knowledge_graphs/impl/plotter/: __init__.py  plotter_plt.py
tests/: test_fruni.py  test_ftree.py  test_logger.py  test_plotter.py  test_user_item_attr.py
